--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 # --- Dependencies ---
-node_modules/
+**/node_modules/
 .pnp
 .pnp.js
 
@@ -15,7 +15,7 @@ build/
 dist/
 
 # --- Security & Environment Variables (CRITICAL) ---
-.env
+**/.env
 .env.local
 .env.development.local
 .env.test.local
