--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.3",
+    "chart.js": "^4.5.1",
     "lucide-react": "^0.562.0",
     "next": "16.0.8",
     "react": "19.2.1",
+    "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.1",
     "zod": "^4.2.1"
   },
