--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "test:ci": "vitest run"
   },
   "dependencies": {
+    "@hookform/resolvers": "^5.2.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.3",
     "chart.js": "^4.5.1",
@@ -20,6 +21,7 @@
     "react": "19.2.1",
     "react-chartjs-2": "^5.3.1",
     "react-dom": "19.2.1",
+    "react-hook-form": "^7.71.1",
     "zod": "^4.2.1"
   },
   "devDependencies": {
