--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -6,6 +6,12 @@ on:
   pull_request:
     branches: [main, master]
 
+permissions:
+  contents: read
+  deployments: write
+  statuses: write
+  pull-requests: write
+
 jobs:
   test:
     name: Run Tests, Lint & Build
